# squadmint-multisig

./: Anchor.toml  DEPLOYMENT.md  README.md  SECURITY.md  SECURITY_AUDIT.md  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  program-id-guard.yml  release-request.yml
programs/squad_mint_multi_sig/: Cargo.toml
programs/squad_mint_multi_sig/src/: lib.rs
scripts/: check-program-id.sh  deploy-devnet.sh
tests/: hacker_tests.ts  helper_function.ts  shared_setup.ts  squad_mint_multi_sig.ts
trident-tests/: README.md
