[package]
name = "squad_mint_multi_sig"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "squad_mint_multi_sig"

[features]
default = []
# M-1: build with `--features mainnet` to require SQUADMINT_USDC_MINT at
# compile time (env! fails the build if unset). Used by `anchor run build-prod`.
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1"}

# Anchor 0.31 macros expand cfgs into this crate that cargo doesn't know
# about, tripping rustc's unexpected_cfgs lint (false positives). Declare
# them as expected instead of allowing the lint wholesale, so genuine cfg
# typos in our own code are still caught.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
] }

